unfollows and follows API.js

--- a/ajaxTwitter/app/views/users/_follow_toggle.html.erb
+++ b/ajaxTwitter/app/views/users/_follow_toggle.html.erb
@@ -9,7 +9,7 @@
 
   <button
     data-user-id="<%=user.id%>"
-    data-follow-state="<%=is_following ? "Unfollow!" : "Follow!" %>"
+    data-follow-state="<%=is_following ? "followed" : "unfollowed" %>"
     class="follow-toggle"
   >
     <%= is_following ? "Unfollow!" : "Follow!" %>
